--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@
   --portfolio-fon-color:#FFFFFF;/* колір фону карток портфоліо*/
   --first-margin:30px;
   --second-margin:30px;
+  --duration:250ms;
+  --time-function:cubic-bezier(0.4, 0, 0.2, 1);
  }
 body {
   font-family: 'Roboto',sans-serif;
@@ -64,6 +66,7 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
+
   outline: 1px solid rgb(224, 34, 145);
 }
 .section{
@@ -72,6 +75,7 @@ img {
 }
 .visually-hidden {
   position: absolute;
+
   white-space: nowrap;
   width: 1px;
   height: 1px;
@@ -122,7 +126,12 @@ display: flex;
 align-items: center;
 margin-left: 93px;
 }
+.header-item + .header-item{
+margin-left: 50px;
+}
 .header-link{
+position: relative;
+
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -133,6 +142,7 @@ padding-top: 32px;
 padding-bottom: 32px;
 
 color: var(--header-color);
+transition: color var(--duration) var(--time-function);
 }
 .header-link:hover,
 .header-link:focus {
@@ -141,8 +151,17 @@ color:var(--hover-color);
 .header-link.current{
 color: var(--current-color);
 }
-.header-item + .header-item{
-margin-left: 50px;
+.header-link.current::after{
+  position: absolute;
+  bottom: 0;
+  content: "";
+  width: 100%;
+  height: 4px; 
+  border-radius: 2px;
+
+  display: block;
+
+  background-color:var(--current-color);
 }
 .header-list-contacts{
 display: flex;
@@ -160,6 +179,8 @@ padding-top: 32px;
 padding-bottom: 32px;
 
 color: var(--top-text-color);
+
+transition: color var(--duration) var(--time-function);
 }
 .header-item-contacts + .header-item-contacts{
 margin-left: 50px;
@@ -224,16 +245,14 @@ line-height: 1.36;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 text-align: center;
-width: 696px;
-display: inline-block;
 
+display: inline-block;
+width: 696px;
 margin-bottom: var(--second-margin);
 
 color: var(--top-title-color);
 }
 .hero-btn { 
-min-width: 200px;
-height: 50px;
 font-family: inherit;
 font-weight: 700;
 font-size: 16px;
@@ -242,6 +261,8 @@ text-align: center;
 letter-spacing: 0.06em;
 
 display: block;
+min-width: 200px;
+height: 50px;
 margin: 0 auto;
 border: 1px solid #2196F3;
 box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -249,6 +270,8 @@ border-radius: 4px;
 
 color: var(--top-btn-color);
 background-color:var(--accent-color) ;
+
+transition: background-color var(--duration) var(--time-function),color var(--duration) var(--time-function);
 }
 
 .hero-btn:hover,
@@ -277,7 +300,6 @@ height: 120px;
 border-radius: 4px;
 justify-content: center;
 align-items: center;
-
 margin-bottom: 30px;
 
 background-color: var(--team-fon-color);
@@ -288,6 +310,7 @@ font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+
 margin-bottom: 10px;
 
 color: var(--second-title-color);
@@ -324,6 +347,30 @@ color: var(--bottom-title-color);
 .work-item + .work-item{
   margin-left: var(--first-margin);
 }
+.work-thumb{
+  position: relative;
+}
+.work-thumb-title{
+  position: absolute;
+  bottom: 0;
+
+  display: flex;
+  width: 100%;
+  height: 70px;
+  justify-content: center;
+  align-items: center;
+  
+  background-color: rgba(47, 48, 58, 0.8);
+}
+.work-bottom-title{
+font-family: 'Roboto';
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+
+color: #FFFFFF;
+}
 
 /*---------------team--------------------*/
 
@@ -337,12 +384,12 @@ color: var(--bottom-title-color);
   margin-left: var(--first-margin);
 }
 .team-item{
-  background-color: var(--team-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   overflow: hidden;
-
   padding-bottom: 30px;
+
+  background-color: var(--team-color);
 }
 .team-img{
   margin-bottom: var(--second-margin);
@@ -377,17 +424,22 @@ color: var(--bottom-text-color);
   margin-left: 10px;
 }
 .team-soc-link{
+  display: flex;
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  display: flex;
   justify-content: center;
   align-items: center;
 
   background-color: #FFFFFF;
+
+  transition: background-color var(--duration) var(--time-function);
 }
 .team-soc-icon{
   fill: #AFB1B8;
+
+  transition:fill var(--duration) var(--time-function)
+
 }
 .team-soc-link:hover,
 .team-soc-link:focus{
@@ -417,13 +469,18 @@ color: var(--bottom-text-color);
   border-radius: 4px;
 
   background-color: #FFFFFF;
+
+  transition: background-color var(--duration) var(--time-function);
 }
 .clients-icon{
   fill: #AFB1B8;
+
+  transition: fill var(--duration) var(--time-function);
 }
 .clients-link:hover,
 .clients-link:focus{
   border: 1px solid var(--hover-color);
+
   background-color:#FFFFFF;
 }
 .clients-link:hover .clients-icon,
@@ -455,7 +512,10 @@ color:var(--logo-bottom-color);
 font-size: 14px;
 line-height:1.71;
 letter-spacing: 0.03em;
+
 color: var(--contacts-color);
+
+transition: color var(--duration) var(--time-function);
 
 }
 .footer-link:hover,
@@ -510,6 +570,8 @@ color: #FFFFFF;
   align-items: center;
 
   background-color: rgba(255, 255, 255, 0.1);
+
+  transition: background-color var(--duration) var(--time-function);
 }
 .footer-soc-link:hover,
 .footer-soc-link:focus{
@@ -517,6 +579,8 @@ color: #FFFFFF;
 }
 .footer-soc-icon{
   fill: #FFFFFF;
+
+  transition: fill var(--duration) var(--time-function);
 }
 
 /*---------------hero portfolio-------------------*/
@@ -543,6 +607,8 @@ border-radius: 4px;
 
 color:var(--second-btn-color);
 background-color:var(--bacground-btn-color);
+
+transition: background-color var(--duration) var(--time-function),color var(--duration) var(--time-function),box-shadow var(--duration) var(--time-function);
 }
 .current-btn{
   border: 1px solid #2196F3;
@@ -569,6 +635,8 @@ background-color:var(--bacground-btn-color);
 }
 .portfolio-link{
   display: block;
+
+  transition: box-shadow var(--duration) var(--time-function);
 }
 .portfolio-item{
   flex-basis: calc(100% / 3 - 30px);
