--- a/css/styles.css
+++ b/css/styles.css
@@ -639,6 +639,7 @@ transition: background-color var(--duration) var(--time-function),color var(--du
   transition: box-shadow var(--duration) var(--time-function);
 }
 .portfolio-item{
+  display: block;
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
@@ -647,6 +648,15 @@ transition: background-color var(--duration) var(--time-function),color var(--du
 .portfolio-link:hover{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+/* .overlay{
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);;
+}
+.overlay-text{
+padding: 63px ;
+} */
 .portfolio-content{
 padding: 20px 24px;
 border: 1px solid #EEEEEE;
