--- a/css/styles.css
+++ b/css/styles.css
@@ -635,7 +635,7 @@ transition: background-color var(--duration) var(--time-function),color var(--du
 }
 .portfolio-link{
   display: block;
-
+  
   transition: box-shadow var(--duration) var(--time-function);
 }
 .portfolio-item{
@@ -648,15 +648,29 @@ transition: background-color var(--duration) var(--time-function),color var(--du
 .portfolio-link:hover{
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-/* .overlay{
-  display: block;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(33, 150, 243, 0.9);;
+.overlay{
+ position: relative;
+ overflow: hidden;
 }
 .overlay-text{
-padding: 63px ;
-} */
+position: absolute;
+top: 0;
+height: 100%;
+
+padding: 63px 24px;
+font-size: 18px;
+line-height:1.56;
+letter-spacing: 0.03em;
+
+color: #FFFFFF;
+background-color: rgba(33, 150, 243, 0.9);
+
+transform: translateY(100%) scale(0,0);
+transition: transform var(--duration) var(--time-function);
+}
+.portfolio-link:hover .overlay-text{
+  transform: translateY(0%) scale(1,1);
+}
 .portfolio-content{
 padding: 20px 24px;
 border: 1px solid #EEEEEE;
