--- a/css/styles.css
+++ b/css/styles.css
@@ -583,6 +583,47 @@ color: #FFFFFF;
   transition: fill var(--duration) var(--time-function);
 }
 
+/* ------------modal----------------- */
+
+.backdrop{
+  position: fixed;
+  top: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity var(--duration) var(--time-function),visibility var(--duration) var(--time-function);
+}
+.backdrop.is-hidden .modal{
+  transform: scale (0,5);
+}
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  width: 528px;
+  min-height: 581px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  background-color: #FFFFFF;
+
+  transition: transform var(--duration) var(--time-function),visibility var(--duration) var(--time-function);
+  transform: translate(-50%,-50%) scale(1);
+}
+.modal-close{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
+}
 /*---------------hero portfolio-------------------*/
 .portfolio-btn-list{
   display: flex;
