--- a/css/styles.css
+++ b/css/styles.css
@@ -571,6 +571,8 @@ color: #FFFFFF;
   align-items: center;
 
   background-color: rgba(255, 255, 255, 0.1);
+  
+  transition: background-color var(--duration) var(--time-function);
 }
 .footer-soc-link:hover,
 .footer-soc-link:focus{
